imagedrawer: fix ie problems ... to be continued

--- a/karl/views/static/tiny_mce/plugins/imagedrawer/css/ui.css
+++ b/karl/views/static/tiny_mce/plugins/imagedrawer/css/ui.css
@@ -42,10 +42,12 @@
 }
 
 /* XXX temporarily, until panel is filled */
+/*
 .tiny-imagedrawer-buttonset-save {
     position: absolute;
     top: 435px;
 }
+*/
 
 .tiny-imagedrawer-buttonset-upload {
     margin-left: 0;
