imagedrawer: IE layout fixes dquote> also: clean imagestripe code a bit

--- a/karl/views/static/tiny_mce/plugins/imagedrawer/css/ui.css
+++ b/karl/views/static/tiny_mce/plugins/imagedrawer/css/ui.css
@@ -43,10 +43,10 @@
 
 /* XXX temporarily, until panel is filled */
 /*
-.tiny-imagedrawer-buttonset-save {
-    position: absolute;
-    top: 435px;
-}
+//.tXXX XXX XXX XXX XXXiny-imagedrawer-buttonset-save {
+//    position: absolute;
+//    top: 435px;
+//}
 */
 
 .tiny-imagedrawer-buttonset-upload {
