--- a/karl/views/static/tiny_mce/plugins/imagedrawer/css/ui.css
+++ b/karl/views/static/tiny_mce/plugins/imagedrawer/css/ui.css
@@ -109,3 +109,18 @@ span.tiny-imagedrawer-imagelabel {
     overflow: hidden;
     white-space: nowrap;
 }
+
+input.tiny-imagedrawer-urlinput {
+    width: 350px;
+}
+
+.tiny-imagedrawer-buttonset-check {
+    margin-top: 1em;
+    margin-left: 0;
+}
+
+.tiny-imagedrawer-buttonset-save {
+    margin-top: 2em;
+    margin-left: 0;
+}
+
