--- a/karl/views/static/tiny_mce/plugins/imagedrawer/css/ui.css
+++ b/karl/views/static/tiny_mce/plugins/imagedrawer/css/ui.css
@@ -92,6 +92,7 @@ div.tiny-imagedrawer-image img {
      * have a role with stale oversize thumbs.*/
     max-height: 85px;
     max-width: 85px;
+    overflow: hidden;
 }
 
 span.tiny-imagedrawer-imagelabel {
