--- a/karl/views/static/tiny_mce/plugins/imagedrawer/css/ui.css
+++ b/karl/views/static/tiny_mce/plugins/imagedrawer/css/ui.css
@@ -68,7 +68,8 @@
 }
 
 .tiny-imagedrawer-buttonset-upload,
-.tiny-imagedrawer-buttonset-uploadreset {
+.tiny-imagedrawer-buttonset-uploadreset,
+.tiny-imagedrawer-buttonset-cancelhelp {
     margin-left: 0;
     margin-top: 1.5em;
 }
