imagedrawer: fix centered images on ie (both captioned and non-captioned)

--- a/karl/views/static/jquery-ui/karl-captionedimage/demo.html
+++ b/karl/views/static/jquery-ui/karl-captionedimage/demo.html
@@ -57,6 +57,19 @@
       nulla diam luctus eros; sit amet venenatis sem nisl a enim. Vivamus lacus nisi,
       faucibus ut interdum et, lacinia a metus. Sed eget ante ipsum, pellentesque
       blandit mauris. Fusce tincidunt ultricies ante, eget tempus turpis vulputate
+      sed. Cras congue tincidunt elit, at ullamcorper nulla sagittis id. Aenean
+      consequat quam nec ante rhoncus hendrerit. Fusce egestas hendrerit eleifend.
+      Cras id risus vitae enim sodales sodales sed quis elit. Phasellus hendrerit mi
+    </p>
+
+    <p>
+      Aliquam tincidunt lacus id augue eleifend vulputate. Nulla sodales, sem ac
+      fermentum ultrices, nulla arcu viverra justo, nec venenatis lectus purus eu
+      neque. Praesent nec ornare quam. Fusce arcu lectus, porttitor id fermentum
+      quis, ullamcorper et sapien. Pellentesque sagittis, urna id feugiat varius,
+      nulla diam luctus eros; sit amet venenatis sem nisl a enim. Vivamus lacus nisi,
+      faucibus ut interdum et, lacinia a metus. Sed eget ante ipsum, pellentesque
+      blandit mauris. Fusce tincidunt ultricies ante, eget tempus turpis vulputate
       sed.
       Suspendisse sodales consectetur elementum. Phasellus a nibh nunc.
       Vestibulum eget sem at felis varius molestie. Duis rutrum porta aliquam.
@@ -146,6 +159,27 @@
       adipiscing ullamcorper convallis. Class aptent taciti sociosqu ad litora
       torquent per conubia nostra, per inceptos himenaeos.
     </p>
+
+    <p style="text-align:left;">
+      Finally, this is what happens when an image gets centered
+      into a left-aligned paragraph. This works even on IE.
+     
+
+      <img class="image" style="display: block; margin-left: auto; margin-right: auto;" 
+        alt="Image Six"
+        width="200px" height="150px"
+        src="images/bicking2.png">
+
+      Suspendisse sodales consectetur elementum. Phasellus a nibh nunc.
+      Vestibulum eget sem at felis varius molestie. Duis rutrum porta aliquam.
+      Suspendisse bibendum dui ut diam aliquet non iaculis ante faucibus.
+      Curabitur sit amet orci nulla!
+      Pellentesque in sagittis ante. Ut porttitor
+      sollicitudin fringilla. Proin sed eros tortor, nec luctus risus! Curabitur
+      adipiscing ullamcorper convallis. Class aptent taciti sociosqu ad litora
+      torquent per conubia nostra, per inceptos himenaeos.
+    </p>
+
 
 
   </body>
