--- a/karl/views/static/jquery-ui/karl-captionedimage/demo_test.html
+++ b/karl/views/static/jquery-ui/karl-captionedimage/demo_test.html
@@ -159,15 +159,36 @@
         torquent per conubia nostra, per inceptos himenaeos.
       </p>
 
+      <p style="text-align: left;"> <!-- inside non-centered flow, critical on IE -->
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dui tellus,
+        bibendum id tincidunt quis, adipiscing in ipsum. Praesent eu leo nisl.
+        Curabitur accumsan placerat mauris, vulputate tincidunt nunc porttitor
+        suscipit. Suspendisse aliquet velit vitae lectus eleifend non dapibus massa
+        congue. Morbi eu sem nisi. Integer arcu odio, suscipit eu ultricies eget,
+        aliquam eget ligula. Fusce at tortor a ipsum pellentesque ultrices nec nec
+        augue.
+
+        <img class="image" style="display: block; margin-left: auto; margin-right: auto;" 
+          alt="Image Five"
+          width="200px" height="150px"
+          src="images/bicking2.png">
+
+        Suspendisse sodales consectetur elementum. Phasellus a nibh nunc.
+        Vestibulum eget sem at felis varius molestie. Duis rutrum porta aliquam.
+        Suspendisse bibendum dui ut diam aliquet non iaculis ante faucibus.
+        Curabitur sit amet orci nulla!
+        Pellentesque in sagittis ante. Ut porttitor
+        sollicitudin fringilla. Proin sed eros tortor, nec luctus risus! Curabitur
+        adipiscing ullamcorper convallis. Class aptent taciti sociosqu ad litora
+        torquent per conubia nostra, per inceptos himenaeos.
+      </p>
 
       <p> <!-- test with no style -->
         <img class="image" 
-          alt="Image Six"
+          alt="Image Seven"
           width="200px" height="150px"
           src="images/bicking2.png">
       </p>
-
-
 
     </div>
   </body>
