changed attachment handling links in edit views to more clearly appear as links

--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -124,6 +124,12 @@ label {
   border: 1px solid #eda379;
 }
 
+.save-attachments a {
+  font-weight: bold;
+  text-decoration: underline;
+  cursor: hand;
+}
+
 /** =FORMISH FORMS
 ----------------------------------------------- */
 
