Various imagedrawer fixes
- Fix and restyle Upload panel
  * Fix the upload/reset buttons

- Fix Web tab similar as upload
  * Add "None Selected" label in web tab
  * Change button label Check to Preview in the Web panel

- Better handling of replace images
  * Autodetect and handle replace options
  * Handle external (web) replace images
  * Implement internal replace images

- Remove All KARL tab completely

- Disable captions

- IE bugs
  * solve IE7 form bug - caused form values in info panel reseted
  * Fix include domain parts on IE
  * other ...

- Other changes
  * Additional styling on upload and web
  * Move imagedrawer_dialog_snippet to the plugin

--- a/karl/views/static/tiny_mce/plugins/imagedrawer/css/ui.css
+++ b/karl/views/static/tiny_mce/plugins/imagedrawer/css/ui.css
@@ -67,13 +67,16 @@
     padding-left: 75px;
 }
 
-.tiny-imagedrawer-buttonset-upload,
-.tiny-imagedrawer-buttonset-uploadreset,
 .tiny-imagedrawer-buttonset-cancelhelp {
     margin-left: 0;
     margin-top: 1.5em;
 }
 
+.tiny-imagedrawer-buttonset-upload {
+    margin-left: 0;
+    margin-top: 1.5em;
+    float: none !important;
+}
 /* Image listing */
 .tiny-imagedrawer-panel-images {
     overflow: hidden;
@@ -186,14 +189,34 @@ span.tiny-imagedrawer-imagelabel {
 }
 
 
+.tiny-imagedrawer-panel-external ul.tiny-imagedrawer-imagestripe {
+    height: 212px; /* must match height of the li */
+}
+.tiny-imagedrawer-panel-external ul.tiny-imagedrawer-imagestripe li {
+    width: 183px; /* 4px + 175px + 4px */
+    height: 210px; /* must match height of the ul */
+}
+.tiny-imagedrawer-panel-external div.tiny-imagedrawer-image {
+    width: 183px; /* 4px + 175px + 4px */
+    height: 183px; /* 4px + 175px + 4px */
+}
+.tiny-imagedrawer-panel-external div.tiny-imagedrawer-image img {
+    max-height: 175px;
+    max-width: 175px;
+}
+.tiny-imagedrawer-panel-external span.tiny-imagedrawer-imagelabel {
+    max-width: 175px;
+}
+
 
 input.tiny-imagedrawer-input-url {
-    width: 350px;
+    width: 300px;
 }
 
 .tiny-imagedrawer-buttonset-check {
     margin-top: 1em;
-    margin-left: 0;
+    margin-left: 8px;
+    float: none !important;
 }
 
 .tiny-imagedrawer-buttonset-save {
@@ -213,6 +236,38 @@ input.tiny-imagedrawer-input-captiontext {
     opacity: 0.50;
 }
 
-.tiny-imagedrawer-input-titletext {
-    width: 325;
+.tiny-imagedrawer-upload-titletext-wrapper {
+    margin-top: 0.25em;
 }
+.tiny-imagedrawer-input-titletext {
+    width: 300px;
+}
+
+.tiny-imagedrawer-upload-label {
+    margin-left: -42px;
+    float: left;
+}
+
+.tiny-imagedrawer-upload-columnwrapper {
+    padding-left: 50px;
+}
+
+.tiny-imagedrawer-external-label {
+    margin-left: -42px;
+    float: left;
+}
+
+.tiny-imagedrawer-external-columnwrapper {
+    padding-left: 50px;
+}
+
+.tiny-imagedrawer-external-previewtitle {
+    font-size: 1.4em;
+    margin-bottom: 0.25em;
+}
+
+.tiny-imagedrawer-external-previewtext {
+    font-style: italic;
+    margin-left: 8px;
+}
+
