--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -2942,7 +2942,7 @@ ul.menu li {
 
 .set_preferred_ui {
     font-size: 90%;
-    margin-left: 3px;
+    margin-left: 1px;
 }
 
 .set_preferred_normal {
@@ -2953,9 +2953,7 @@ ul.menu li {
 #preferred_form {
     background-color: #e0e0e0;
     font-size: 90%;
-    padding: 4px;
-    margin: 4px;
-    border: 1px solid black;
+    margin: 1px;
 }
 
 #preferred_form span {
@@ -2967,4 +2965,35 @@ ul.menu li {
 #preferred-message {
     width: 130px;
     margin: 10px;
+}
+
+.preferred-buttons {
+    display: block;
+    height: 60px;
+}
+
+.preferred-buttons a, .preferred-buttons a:visited {
+    cursor: hand;
+    margin: 2px;
+    width: 79px;
+    height: 20px;
+    float: left;
+    line-height: 20px;
+    background: url("images/cal_buttons_new_event.png") 0 0 no-repeat;
+    font-weight: bold;
+    font-family: Arial, Verdana, sans-serif;
+    font-size: 10px;
+    text-decoration: none;
+    text-align: center;
+    color: #fff;
+    z-index: 1000;
+}
+
+.preferred-buttons a:hover {
+  background: url("images/cal_buttons_new_event.png") 0 -20px no-repeat;
+  text-decoration: none;
+}
+
+.preferred-buttons a:active {
+  background: url("images/cal_buttons_new_event.png") 0 -40px no-repeat;
 }
