hid the overflow on the main content area, so that when wide items are   entered, the entire content area won't fall beneath the left menu in IE.   (LP #576042)

--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -519,6 +519,7 @@ a.chparent:hover {
   padding:10px;
   margin: 0 15px 15px;
   position:relative;
+  overflow:hidden;
 }
 #right {
  	float: right;
